patched another dark mode bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,3 +157,8 @@ footer {
     color: #000000;
    
 }
+
+.dark-mode #genre {
+        color: #000000; 
+      
+}
